# vespa-shyx

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  License.txt  README.md  VESPA_Plugin_Icon_Prompts.md  VESPA_Plugin_Schematic_Prompts.md  VESPA_Plugin_功能说明.md  tmp_prefix_nodesets.py  vtk.module
.gitlab/: 5.10.yml  5.11.yml  5.12.yml  5.13.yml  6.0.yml  common.yml  format.yml  latest.yml  vtk.yml
.gitlab/ci/: boost.sh  cgal.sh  eigen.sh  gmp.sh  mpfr.sh
CMake/: vespa.cmake.in
Data/Resources/: CGAL_LICENSE.GPL
Data/Testing/: FingerSelection.csv  HornSelection.csv  PalmSelection.csv  brake.vtp  dragon.xyz  hand.vtp  kitten.xyz  pegasus.vtp  shrink_plane.vtp  sphere_open.vtp
ParaViewPlugin/: AnimatedStreamlineRepresentation.xml  CMakeLists.txt  PointLabelRepresentation.xml  PulseGlyphRepresentation.xml  SHYXAdaptiveIsotropicRemesher.xml  SHYXAdaptiveIsotropicRemesherTest.xml  SHYXArrayCurveMapper.xml  SHYXAutorefineSelfIntersectionFilter.xml  SHYXBooleanOperationFilter.xml  SHYXClebschMapFilter.xml  SHYXConvexHullFilter.xml  SHYXDataSetToPartitionedCollection.xml  SHYXDeleteSelectedCells.xml  SHYXDisconnectedRegionFuse.xml  SHYXEdgeCollapse.xml  SHYXEndpointStentPlacement.xml  SHYXEndpointStentWidgetRepresentation.xml  SHYXEnhancedRuler.xml  SHYXFTLEFilter.xml  SHYXFlipSelectedCellsWinding.xml  SHYXGeodesicDistance.xml  SHYXHoleFillFilter.xml  SHYXImplicitCylinderWidgetRepresentation.xml  SHYXMeshChecker.xml  SHYXMinimumOBB.xml  SHYXOppositeFaceThickness.xml  SHYXPartitionedCollectionBoundaryFields.xml  SHYXPartitionedCollectionWslSimulation.xml  SHYXPointExtrude.xml  SHYXRadiusNeighborCount.xml  SHYXRemeshWithEndpoint.xml  SHYXRepairDegeneracies.xml  SHYXSelectionExtrude.xml  SHYXSelectionFillAlphaReunionFilter.xml  SHYXSelectionOBBSubtract.xml  SHYXSelectionPlaneClipper.xml  SHYXShapeSmoothing.xml  SHYXSurfaceTipExtractor.xml  SHYXSurfaceToVolumeMesh.xml  SHYXTetGen.xml  (+38 more)
ParaViewPlugin/AnimatedStreamlineRepresentation/: vtk.module  vtkAnimatedStreamlineCompositePolyDataMapper.cxx  vtkAnimatedStreamlineCompositePolyDataMapper.h  vtkAnimatedStreamlineRepresentation.cxx  vtkAnimatedStreamlineRepresentation.h
ParaViewPlugin/PulseGlyphRepresentation/: CMakeLists.txt  vtkPulseGlyphRepresentation.cxx  vtkPulseGlyphRepresentation.h
ParaViewPlugin/Resources/UI/: pqCylinderPropertyWidget.ui
ParaViewPlugin/SphereSelection/: pqSHYXSphereSelectionAutoStart.cxx  pqSHYXSphereSelectionAutoStart.h  pqSHYXSphereSelectionController.cxx  pqSHYXSphereSelectionController.h  pqSHYXSphereSelectionViewFrameActions.cxx
ParaViewPlugin/Testing/: CMakeLists.txt  TestAlphaWrapping.xml  TestAlphaWrapping.xml.in
ParaViewPlugin/TransferCurve/: pqArrayCurveMapperPanel.cxx  pqArrayCurveMapperPanel.h  pqSHYXTransferCurveWidget.cxx  pqSHYXTransferCurveWidget.h  vtkSHYXCompositeControlPointsItem.cxx  vtkSHYXCompositeControlPointsItem.h  vtkSHYXGrayHistogramPiecewiseFunctionItem.cxx  vtkSHYXGrayHistogramPiecewiseFunctionItem.h  vtkSHYXInputRangeHandlesItem.cxx  vtkSHYXInputRangeHandlesItem.h  vtkSHYXOutputRangeHandlesItem.cxx  vtkSHYXOutputRangeHandlesItem.h  vtkSHYXTransferChartXY.cxx  vtkSHYXTransferChartXY.h
PolygonMeshProcessing/: vtkCGALisotropicRemesh.cxx  vtkCGALisotropicRemesh.h
TetGen-1.6.0/: CMakeLists.txt
VTKCGAL/: CMakeLists.txt  vtk.module
VTKCGAL/PolygonMeshProcessing/: vtkCGALisotropicRemesh.cxx  vtkCGALisotropicRemesh.h
icon/: batch_resize_icons.py
scripts/: check_smp_backend.py
vespa/Algorithm/: CMakeLists.txt  vtk.module  vtkCGALHelper.cxx  vtkCGALHelper.h  vtkCGALPolyDataAlgorithm.cxx  vtkCGALPolyDataAlgorithm.h
vespa/ArrayCurveMapper/: vtk.module  vtkArrayCurveMapper.h
vespa/ClebschMapFilter/: vtkSHYXClebschMapFilter.cxx  vtkSHYXClebschMapFilter.h
vespa/DataSetToPartitionedCollection/: CMakeLists.txt  vtk.module  vtkSHYXDataSetToPartitionedCollection.cxx  vtkSHYXDataSetToPartitionedCollection.h
vespa/PolygonMeshProcessing/: CMakeLists.txt  vtk.module  vtkCGALAdvancingFrontSurfaceReconstruction.h  vtkCGALAlphaWrapping.cxx  vtkCGALAlphaWrapping.h  vtkCGALBooleanOperation.cxx  vtkCGALBooleanOperation.h  vtkCGALDelaunay.cxx  vtkCGALDelaunay.h  vtkCGALDelaunay2.cxx  vtkCGALDelaunay2.h  vtkCGALDelaunay3.cxx  vtkCGALDelaunay3.h  vtkCGALDensityBasedSampler.cxx  vtkCGALDensityBasedSampler.h  vtkCGALIsotropicRemesher.cxx  vtkCGALIsotropicRemesher.h  vtkCGALMeshChecker.cxx  vtkCGALMeshChecker.h  vtkCGALMeshDeformation.cxx  vtkCGALMeshDeformation.h  vtkCGALMeshSmoothing.cxx  vtkCGALMeshSmoothing.h  vtkCGALMeshSubdivision.cxx  vtkCGALMeshSubdivision.h  vtkCGALPCAEstimateNormals.cxx  vtkCGALPCAEstimateNormals.h  vtkCGALPatchFilling.cxx  vtkCGALPatchFilling.h  vtkCGALPointCloudSurfaceSignedDistance.cxx  vtkCGALPointCloudSurfaceSignedDistance.h  vtkCGALPoissonSurfaceReconstructionDelaunay.cxx  vtkCGALPoissonSurfaceReconstructionDelaunay.h  vtkCGALPolyDataAlgorithm.cxx  vtkCGALPolyDataAlgorithm.h  vtkCGALRegionFairing.cxx  vtkCGALRegionFairing.h  vtkCGALShapeSmoothing.cxx  vtkCGALShapeSmoothing.h  vtkCGALSignedDistanceFunction.cxx  (+15 more)
vespa/PolygonMeshProcessing/Testing/: CMakeLists.txt  TestDelaunayExecution.cxx  TestPMPAlphaWrapping.cxx  TestPMPBooleanExecution.cxx  TestPMPDeformExecution.cxx  TestPMPFairExecution.cxx  TestPMPFillExecution.cxx  TestPMPInstance.cxx  TestPMPIsotropicExecution.cxx  TestPMPMeshCheckerExecution.cxx  TestPMPMeshSmoothingExecution.cxx  TestPMPMeshSubdivisionExecution.cxx  TestPMPPointCloudSurfaceSignedDistance.cxx  TestPMPSignedDistanceFunction.cxx  TestPMPSmoothingExecution.cxx  TestPMPSubdivisionExecution.cxx  execute_IsotropicRemesher.py  import_vtkCGALPMP.py
vespa/shyx/ClebschMapFilter/: CMakeLists.txt  README.md  vtk.module
vespa/shyx/MeshChecker/: CMakeLists.txt  vtk.module  vtkSHYXMeshChecker.cxx  vtkSHYXMeshChecker.h
vespa/shyx/TetMeshRegionPartition/: CMakeLists.txt  vtk.module  vtkSHYXTetMeshRegionPartition.cxx  vtkSHYXTetMeshRegionPartition.h
vespa/shyx/VmtkPolyDataCenterlines/: CMakeLists.txt  vtk.module  vtkSHYXVmtkPolyDataCenterlines.cxx  vtkSHYXVmtkPolyDataCenterlines.h
vtkCGAL/: CMakeLists.txt  vtk.module
(+263 files in other folders)
